--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,3 +18,4 @@ ndarray-linalg = {version = "0.16.0", features = ["intel-mkl"]}
 [dev-dependencies]
 plotters = "0.3.5"
 linspace = "0.1.1"
+image = "0.25.1"
