--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,12 +8,13 @@ edition = "2021"
 [dependencies]
 thiserror = "1.0.58"
 moddef = "0.2.2"
-array_math = {version = "0.2.35", features = ["ndarray"]}
+array_math = {version = "0.2.36", features = ["ndarray"]}
 num = "0.4.1"
-option_trait = "0.1.12"
+option_trait = "0.1.14"
 rand = "0.8.5"
 ndarray = "0.15.6"
 ndarray-linalg = {version = "0.16.0", features = ["intel-mkl"]}
+statrs = "0.16.0"
 
 [dev-dependencies]
 plotters = "0.3.5"
