--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,6 +2,10 @@
 name = "signal_processing"
 version = "0.1.0"
 edition = "2021"
+license = "MIT"
+description = "A signal processing library."
+repository = "https://github.com/sigurd4/signal_processing"
+keywords = ["signal processing", "dsp", "discrete-time signal processing", "dtsp"]
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
